# SnapCapsule-Web-V2

./: .dockerignore  .env.example  .env.zimaos.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-compose.zimaos.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260327_0001_baseline_schema.py  20260327_0002_jsonb_tags_indexes.py
apps/: __init__.py
apps/api/: Dockerfile  __init__.py
apps/api/app/: main.py
apps/backend/: Dockerfile  Dockerfile.prod
apps/web/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/public/: site.webmanifest
apps/web/src/: App.test.tsx  (+4 more)
apps/worker/: Dockerfile
scripts/: backfill-plain-thumbnails.ps1  backfill_plain_thumbnails.py  rebuild-chat-links.ps1  rebuild_chat_links.py  reclassify-audio-assets.ps1  reclassify_audio_assets.py  repair-memory-overlays.ps1  repair-memory-timestamps.ps1  repair_memory_overlays.py  repair_memory_timestamps_from_archives.py  restart-dev.ps1  run-backend-tests.ps1
tests/: conftest.py  test_asset_queries.py  test_asset_routes.py  test_chat_queries.py  test_chat_routes.py  test_config.py  test_db_init.py  test_ingestion_recovery.py  test_ingestion_routes.py  test_ingestion_service.py  test_media_overlay_processing.py  test_media_playback.py  test_profile_routes.py  test_settings_routes.py  test_settings_store.py  test_story_routes.py  test_system_tools.py  test_thumbnail_repairs.py
(+80 files in other folders)
