[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapcapsule-web"
version = "0.1.0"
description = "SnapCapsule Web foundation with FastAPI, Celery, PostgreSQL, and Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.13.4",
  "celery[redis]==5.4.0",
  "ffmpeg-python==0.2.0",
  "fastapi==0.116.1",
  "pillow==11.1.0",
  "pydantic==2.12.5",
  "psycopg[binary]==3.2.9",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.20",
  "redis==5.2.1",
  "sqlalchemy==2.0.39",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
